--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -11,12 +11,14 @@ beautifulsoup4==4.12.3
 bleach==6.2.0
 boto3==1.35.86
 botocore==1.35.86
+CacheControl==0.14.2
 cachetools==5.5.0
 certifi==2024.12.14
 cffi==1.17.1
 charset-normalizer==3.4.1
 click==8.1.8
 cohere==5.13.8
+cryptography==44.0.0
 curl_cffi==0.7.4
 dataclasses-json==0.6.7
 decorator==5.1.1
@@ -29,13 +31,17 @@ fastapi==0.115.6
 fastavro==1.10.0
 fastjsonschema==2.21.1
 filelock==3.16.1
+firebase-admin==6.6.0
 frozenlist==1.5.0
 fsspec==2024.12.0
 google-api-core==2.24.0
+google-api-python-client==2.159.0
 google-auth==2.37.0
+google-auth-httplib2==0.2.0
 google-cloud-aiplatform==1.77.0
 google-cloud-bigquery==3.27.0
 google-cloud-core==2.4.1
+google-cloud-firestore==2.20.0
 google-cloud-resource-manager==1.14.0
 google-cloud-storage==2.19.0
 google-crc32c==1.6.0
@@ -51,6 +57,7 @@ h11==0.14.0
 h2==4.1.0
 hpack==4.0.0
 httpcore==1.0.7
+httplib2==0.22.0
 httpx==0.28.1
 httpx-sse==0.4.0
 huggingface-hub==0.27.1
@@ -82,6 +89,7 @@ marshmallow==3.25.1
 matplotlib-inline==0.1.7
 mdurl==0.1.2
 mistune==3.1.0
+msgpack==1.1.0
 multidict==6.1.0
 mypy-extensions==1.0.0
 nbclient==0.10.2
@@ -116,6 +124,8 @@ pydantic-settings==2.7.1
 pydantic_core==2.23.4
 pyee==12.0.0
 Pygments==2.18.0
+PyJWT==2.10.1
+pyparsing==3.2.1
 PySocks==1.7.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
@@ -158,6 +168,7 @@ types-requests==2.32.0.20241016
 typing-inspect==0.9.0
 typing_extensions==4.12.2
 tzdata==2024.2
+uritemplate==4.1.1
 urllib3==2.3.0
 uvicorn==0.34.0
 wcwidth==0.2.13
